# ciudad_juarez

./: .env.example  .gitignore  01_accesibilidad.ipynb  02_industrias.ipynb  03_trafico.ipynb  04_inundaciones.ipynb  05_codebook.ipynb  06_codebook_colonias.ipynb  07_denue.ipynb  08_capas_complementarias.ipynb  09_drenajes.ipynb  10_inundaciones_raster.ipynb  11_arboles.ipynb  accesibilidad.ipynb  air_quality.ipynb  block_statistics.ipynb  codebook.ipynb  codebook_colonias.ipynb  fix_blocks.ipynb  fix_neighborhoods.ipynb  flooding.ipynb  industries.ipynb  kriging.ipynb  maing.ipynb  neighborhood_statistics.ipynb  pyproject.toml  trafico_vehicular.ipynb  travel_time.ipynb
nad/: accessibility.py  constants.py  equip.py  flooding.py  load.py  traffic.py
src/: accessibility.py
